adding cap sync android

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,20 +13,23 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Use Node.js 18.x
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
           cache: 'npm'
-          
+
       - run: npm ci
-      
+
       - run: npm run build --if-present
-      
+
       - run: npm run test:ci
-      
+
       - run: npm run lint
+
+      - name: Capacitor Android Sync
+        run: npx cap sync android
