--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,10 +10,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  angular:
+    name: Angular
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -25,11 +24,45 @@ jobs:
 
       - run: npm ci
 
-      - run: npm run build --if-present
+      #- run: npm run build --if-present
 
-      - run: npm run test:ci
+      #- run: npm run test:ci
 
-      - run: npm run lint
+      #- run: npm run lint
+
+  android:
+    name: Android
+    needs: angular
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: 'npm'
+
+      - run: npm ci
 
       - name: Capacitor Android Sync
         run: npx cap sync android
+
+  ios:
+    name: iOS
+    needs: angular
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: 'npm'
+
+      - run: npm ci
+
+      - name: Capacitor iOS Sync
+        run: npx cap sync iOS
+
