--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           node-version: 18.x
           cache: 'npm'
+      - name: Use Java Temurin 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - run: npm ci
       - run: npm run build
